fixed detail card alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,7 +12,7 @@ code {
     monospace;
 }
 .techBody{
-
+  height: 100%;
   height: fit-content;
   gap: 5px;
 }
@@ -20,4 +20,8 @@ code {
 .chairBtn {
   margin: 10px;
   height: 6vh;
+}
+
+.detailCard {
+  justify-content: flex-end;
 }
